--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -272,8 +272,7 @@
             android:name=".feature.media_picker.presentation.MediaPickerActivity"
             android:enabled="@bool/at_least_26"
             android:exported="true"
-            android:launchMode="singleTask"
-            android:theme="@style/Theme.ImageToolbox">
+            android:launchMode="singleTask">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.PICK" />
                 <action android:name="android.intent.action.GET_CONTENT" />
