--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "35"
 androidCompileSdk = "35"
 
-versionName = "3.1.0-rc03"
-versionCode = "158"
+versionName = "3.1.0"
+versionCode = "159"
 
 jvmTarget = "17"
 
