--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,8 +20,8 @@ jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
 material3 = "1.4.0-alpha04"
-composeVersion = "1.8.0-alpha06"
-materialIconsExtended = "1.7.5"
+composeVersion = "1.8.0-alpha07"
+materialIconsExtended = "1.7.6"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -50,7 +50,7 @@ appCompat = "1.7.0"
 androidxCore = "1.15.0"
 androidxLifecycle = "2.9.0-alpha07"
 desugaring = "2.1.3"
-activityCompose = "1.10.0-beta01"
+activityCompose = "1.10.0-rc01"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
 reorderable = "2.4.0"
@@ -63,7 +63,7 @@ ksp = "2.0.21-1.0.28"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-alpha05"
+androidxMacroBenchmark = "1.4.0-alpha06"
 quickie = "1.13.1"
 
 material = "1.13.0-alpha08"
