--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -77,8 +77,10 @@ moshi = "1.15.2"
 aboutlibraries = "11.4.0"
 junit = "4.13.2"
 bouncycastle = "1.79"
+evaluator = "1.0.0"
 
 [libraries]
+evaluator = { module = "com.github.T8RIN:KotlinEvaluator", version.ref = "evaluator" }
 aboutlibraries-m3 = { module = "com.mikepenz:aboutlibraries-compose-m3", version.ref = "aboutlibraries" }
 moshi = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
 trickle = { module = "com.github.t8rin:trickle", version.ref = "trickle" }
