--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,10 +19,10 @@ jxlCoderCoil = "2.4.0.6"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
-material3 = "1.4.0-alpha05"
-composeVersion = "1.8.0-alpha07"
+material3 = "1.4.0-alpha06"
+composeVersion = "1.8.0-alpha08"
 materialIconsExtended = "1.7.6"
-androidx-datastorePreferencesAndroid = "1.1.1"
+androidx-datastorePreferencesAndroid = "1.1.2"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
 shadowGadgets = "2.3.1"
@@ -30,7 +30,7 @@ fadingEdges = "1.0.4"
 firebaseCrashlyticsKtx = "19.3.0"
 konfettiCompose = "2.0.5"
 shadowsPlus = "1.0.4"
-exifinterface = "1.4.0-alpha01"
+exifinterface = "1.4.0-beta01"
 firebaseAnalyticsKtx = "22.1.2"
 firebaseCrashlyticsGradle = "3.0.2"
 google-segmentationSelfie = "16.0.0-beta6"
@@ -50,7 +50,7 @@ appCompat = "1.7.0"
 androidxCore = "1.15.0"
 androidxLifecycle = "2.9.0-alpha08"
 desugaring = "2.1.4"
-activityCompose = "1.10.0-rc01"
+activityCompose = "1.10.0"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
 reorderable = "2.4.2"
