--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ androidMinSdk = "21"
 androidTargetSdk = "35"
 androidCompileSdk = "35"
 
-versionName = "3.1.3-alpha02"
+versionName = "3.2.0-beta01"
 versionCode = "166"
 
 jvmTarget = "17"
