--- a/compose_compiler_config.conf
+++ b/compose_compiler_config.conf
@@ -1,10 +1,29 @@
-// Consider LocalDateTime stable
+java.time.ZoneId
+java.time.ZoneOffset
+java.text.DecimalFormat
+java.text.NumberFormat
+java.time.Instant
+java.time.Duration
+java.time.LocalDate
 java.time.LocalDateTime
-// Consider kotlin collections stable
+java.time.LocalTime
+java.time.ZonedDateTime
+java.util.Date
+java.util.Locale
+java.io.File
+
 kotlin.collections.*
+kotlin.time.Duration
+
+android.net.Uri
 
 androidx.compose.ui.graphics.painter.Painter
+androidx.compose.ui.graphics.vector.ImageVector
 
+ru.tech.imageresizershrinker.core.resources.*
+ru.tech.imageresizershrinker.core.data.*
 ru.tech.imageresizershrinker.core.domain.*
+ru.tech.imageresizershrinker.core.ui.*
+ru.tech.imageresizershrinker.feature.*
 
 nl.dionsegijn.konfetti.core.*
