--- a/compose_compiler_config.conf
+++ b/compose_compiler_config.conf
@@ -20,10 +20,15 @@ android.net.Uri
 androidx.compose.ui.graphics.painter.Painter
 androidx.compose.ui.graphics.vector.ImageVector
 
+ru.tech.imageresizershrinker.core.crash.*
+ru.tech.imageresizershrinker.core.filters.*
 ru.tech.imageresizershrinker.core.resources.*
 ru.tech.imageresizershrinker.core.data.*
 ru.tech.imageresizershrinker.core.domain.*
 ru.tech.imageresizershrinker.core.ui.*
+ru.tech.imageresizershrinker.core.settings.*
+
+ru.tech.imageresizershrinker.core.*
 ru.tech.imageresizershrinker.feature.*
 
 nl.dionsegijn.konfetti.core.*
