Fix broken Draw tool by #1634

--- a/compose_compiler_config.conf
+++ b/compose_compiler_config.conf
@@ -16,9 +16,11 @@ kotlin.collections.*
 kotlin.time.Duration
 
 android.net.Uri
+android.graphics.Bitmap
 
 androidx.compose.ui.graphics.painter.Painter
 androidx.compose.ui.graphics.vector.ImageVector
+androidx.compose.ui.graphics.ImageBitmap
 
 ru.tech.imageresizershrinker.core.crash.*
 ru.tech.imageresizershrinker.core.filters.*
