--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "35"
 androidCompileSdk = "35"
 
-versionName = "3.2.0-beta01"
-versionCode = "166"
+versionName = "3.2.0-beta02"
+versionCode = "167"
 
 jvmTarget = "17"
 
@@ -14,14 +14,14 @@ trickle = "1.2.2"
 avifCoder = "2.0.10"
 avifCoderCoil = "2.0.10"
 aire = "0.15.6"
-jxlCoder = "2.4.0.6"
-jxlCoderCoil = "2.4.0.6"
+jxlCoder = "2.4.0.7"
+jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
-material3 = "1.4.0-alpha06"
-composeVersion = "1.8.0-alpha08"
-materialIconsExtended = "1.7.6"
+material3 = "1.4.0-alpha07"
+composeVersion = "1.8.0-beta01"
+materialIconsExtended = "1.7.7"
 androidx-datastorePreferencesAndroid = "1.1.2"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -30,7 +30,7 @@ fadingEdges = "1.0.4"
 firebaseCrashlyticsKtx = "19.4.0"
 konfettiCompose = "2.0.5"
 shadowsPlus = "1.0.4"
-exifinterface = "1.4.0-beta01"
+exifinterface = "1.4.0-rc01"
 firebaseAnalyticsKtx = "22.2.0"
 firebaseCrashlyticsGradle = "3.0.2"
 google-segmentationSelfie = "16.0.0-beta6"
@@ -48,7 +48,7 @@ ktor = "3.0.3"
 coil = "3.0.4"
 appCompat = "1.7.0"
 androidxCore = "1.15.0"
-androidxLifecycle = "2.9.0-alpha08"
+androidxLifecycle = "2.9.0-alpha09"
 desugaring = "2.1.4"
 activityCompose = "1.10.0"
 kotlinxCollectionsImmutable = "0.3.8"
@@ -58,12 +58,12 @@ reviewKtx = "2.0.2"
 splashScreen = "1.2.0-alpha02"
 
 espresso = "3.6.1"
-ksp = "2.1.0-1.0.29"
+ksp = "2.1.10-1.0.29"
 
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-alpha06"
+androidxMacroBenchmark = "1.4.0-alpha07"
 quickie = "1.13.1"
 
 material = "1.13.0-alpha10"
