--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "35"
 androidCompileSdk = "35"
 
-versionName = "3.2.0-beta02"
-versionCode = "167"
+versionName = "3.2.0-rc01"
+versionCode = "168"
 
 jvmTarget = "17"
 
