--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,9 +19,9 @@ jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
-material3 = "1.4.0-alpha07"
-composeVersion = "1.8.0-beta01"
-materialIconsExtended = "1.7.7"
+material3 = "1.4.0-alpha08"
+composeVersion = "1.8.0-beta02"
+materialIconsExtended = "1.7.8"
 androidx-datastorePreferencesAndroid = "1.1.2"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -47,8 +47,8 @@ gms = "4.4.2"
 ktor = "3.1.0"
 coil = "3.1.0"
 appCompat = "1.7.0"
-androidxCore = "1.15.0"
-androidxLifecycle = "2.9.0-alpha09"
+androidxCore = "1.16.0-alpha02"
+androidxLifecycle = "2.9.0-alpha10"
 desugaring = "2.1.4"
 activityCompose = "1.10.0"
 kotlinxCollectionsImmutable = "0.3.8"
@@ -63,7 +63,7 @@ ksp = "2.1.10-1.0.29"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-alpha07"
+androidxMacroBenchmark = "1.4.0-alpha08"
 quickie = "1.13.1"
 
 material = "1.13.0-alpha10"
