--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "35"
 androidCompileSdk = "35"
 
-versionName = "3.2.0-rc02"
-versionCode = "169"
+versionName = "3.2.0-rc03"
+versionCode = "170"
 
 jvmTarget = "17"
 
@@ -19,19 +19,19 @@ jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
-material3 = "1.4.0-alpha08"
-composeVersion = "1.8.0-beta02"
+material3 = "1.4.0-alpha09"
+composeVersion = "1.8.0-beta03"
 materialIconsExtended = "1.7.8"
-androidx-datastorePreferencesAndroid = "1.1.2"
+androidx-datastorePreferencesAndroid = "1.1.3"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
 shadowGadgets = "2.3.1"
 fadingEdges = "1.0.4"
-firebaseCrashlyticsKtx = "19.4.0"
+firebaseCrashlyticsKtx = "19.4.1"
 konfettiCompose = "2.0.5"
 shadowsPlus = "1.0.4"
-exifinterface = "1.4.0-rc01"
-firebaseAnalyticsKtx = "22.2.0"
+exifinterface = "1.4.0"
+firebaseAnalyticsKtx = "22.3.0"
 firebaseCrashlyticsGradle = "3.0.3"
 google-segmentationSelfie = "16.0.0-beta6"
 google-subjectSegmentation = "16.0.0-beta1"
@@ -40,7 +40,7 @@ detektCompose = "0.4.22"
 decompose = "3.3.0"
 
 kotlin = "2.1.10"
-agp = "8.8.1"
+agp = "8.8.2"
 hilt = "2.55"
 gms = "4.4.2"
 
@@ -48,14 +48,14 @@ ktor = "3.1.1"
 coil = "3.1.0"
 appCompat = "1.7.0"
 androidxCore = "1.16.0-alpha02"
-androidxLifecycle = "2.9.0-alpha10"
+androidxLifecycle = "2.9.0-alpha11"
 desugaring = "2.1.5"
-activityCompose = "1.10.0"
+activityCompose = "1.10.1"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
 reorderable = "2.4.3"
 reviewKtx = "2.0.2"
-splashScreen = "1.2.0-alpha02"
+splashScreen = "1.2.0-beta01"
 
 espresso = "3.6.1"
 ksp = "2.1.10-1.0.30"
@@ -66,7 +66,7 @@ uiautomator = "2.3.0"
 androidxMacroBenchmark = "1.4.0-alpha08"
 quickie = "1.14.0"
 
-material = "1.13.0-alpha10"
+material = "1.13.0-alpha11"
 jsoup = "1.18.3"
 
 documentScanner = "1.3.7"
