--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,8 +19,8 @@ jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
-material3 = "1.4.0-alpha09"
-composeVersion = "1.8.0-beta03"
+material3 = "1.4.0-alpha10"
+composeVersion = "1.8.0-rc01"
 materialIconsExtended = "1.7.8"
 androidx-datastorePreferencesAndroid = "1.1.3"
 appUpdateKtx = "2.1.0"
@@ -46,10 +46,10 @@ gms = "4.4.2"
 ktor = "3.1.1"
 coil = "3.1.0"
 appCompat = "1.7.0"
-androidxCore = "1.16.0-alpha02"
-androidxLifecycle = "2.9.0-alpha11"
+androidxCore = "1.16.0-beta01"
+androidxLifecycle = "2.9.0-alpha12"
 desugaring = "2.1.5"
-activityCompose = "1.10.1"
+activityCompose = "1.11.0-alpha01"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
 reorderable = "2.4.3"
@@ -62,7 +62,7 @@ ksp = "2.1.10-1.0.31"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-alpha08"
+androidxMacroBenchmark = "1.4.0-alpha09"
 quickie = "1.14.0"
 
 material = "1.13.0-alpha11"
