--- a/app/src/main/res/resources.properties
+++ b/app/src/main/res/resources.properties
@@ -14,4 +14,4 @@
 # You should have received a copy of the Apache License
 # along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
 #
-unqualifiedResLocale=en-US
+unqualifiedResLocale=en
