--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,8 +8,13 @@ versionCode = "172"
 
 jvmTarget = "17"
 
-imageToolboxLibs = "3.4.2"
+imageToolboxLibs = "3.5.0"
 trickle = "1.2.2"
+evaluator = "1.0.0"
+quickie = "1.14.0"
+documentScanner = "1.3.7"
+fadingEdges = "1.0.4"
+logger = "1.0.1"
 
 avifCoder = "2.0.10"
 avifCoderCoil = "2.0.10"
@@ -26,7 +31,6 @@ androidx-datastorePreferencesAndroid = "1.1.3"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
 shadowGadgets = "2.3.1"
-fadingEdges = "1.0.4"
 firebaseCrashlyticsKtx = "19.4.1"
 konfettiCompose = "2.0.5"
 shadowsPlus = "1.0.4"
@@ -63,12 +67,10 @@ androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
 androidxMacroBenchmark = "1.4.0-alpha09"
-quickie = "1.14.0"
 
 material = "1.13.0-alpha11"
 jsoup = "1.19.1"
 
-documentScanner = "1.3.7"
 mlkitDocumentScanner = "16.0.0-beta1"
 zxingAndroidEmbedded = "4.3.0"
 capturable = "3.0.1"
@@ -76,7 +78,6 @@ moshi = "1.15.2"
 aboutlibraries = "12.0.0-a02+compose_1_8"
 junit = "4.13.2"
 bouncycastle = "1.80"
-evaluator = "1.0.0"
 ffmpeg-metadata-retriever = "1.0.19"
 
 firebaseCrashlyticsGradle = "3.0.3"
@@ -110,7 +111,7 @@ toolbox-gpuimage = { module = "com.github.T8RIN.ImageToolboxLibs:gpuimage", vers
 toolbox-colorpicker = { module = "com.github.T8RIN.ImageToolboxLibs:colorpicker", version.ref = "imageToolboxLibs" }
 toolbox-systemuicontroller = { module = "com.github.T8RIN.ImageToolboxLibs:systemuicontroller", version.ref = "imageToolboxLibs" }
 toolbox-placeholder = { module = "com.github.T8RIN.ImageToolboxLibs:placeholder", version.ref = "imageToolboxLibs" }
-toolbox-logger = { module = "com.github.T8RIN.ImageToolboxLibs:logger", version.ref = "imageToolboxLibs" }
+toolbox-logger = { module = "com.github.T8RIN:Logger", version.ref = "logger" }
 toolbox-zoomable = { module = "com.github.T8RIN.ImageToolboxLibs:zoomable", version.ref = "imageToolboxLibs" }
 toolbox-extendedcolors = { module = "com.github.T8RIN.ImageToolboxLibs:extendedcolors", version.ref = "imageToolboxLibs" }
 toolbox-androidwm = { module = "com.github.T8RIN.ImageToolboxLibs:androidwm", version.ref = "imageToolboxLibs" }
