--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 androidMinSdk = "21"
-androidTargetSdk = "35"
-androidCompileSdk = "35"
+androidTargetSdk = "36"
+androidCompileSdk = "36"
 
 versionName = "3.2.1-alpha02"
 versionCode = "173"
@@ -24,10 +24,10 @@ jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
-material3 = "1.4.0-alpha10"
-composeVersion = "1.8.0-rc01"
+material3 = "1.4.0-alpha11"
+composeVersion = "1.8.0-rc02"
 materialIconsExtended = "1.7.8"
-androidx-datastorePreferencesAndroid = "1.1.4"
+androidx-datastorePreferencesAndroid = "1.2.0-alpha01"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
 shadowGadgets = "2.3.1"
@@ -43,17 +43,17 @@ detektCompose = "0.4.22"
 decompose = "3.3.0"
 
 kotlin = "2.1.20"
-agp = "8.8.2"
+agp = "8.9.1"
 hilt = "2.56"
 gms = "4.4.2"
 
 ktor = "3.1.1"
 coil = "3.1.0"
 appCompat = "1.7.0"
-androidxCore = "1.16.0-beta01"
-androidxLifecycle = "2.9.0-alpha12"
+androidxCore = "1.16.0-rc01"
+androidxLifecycle = "2.9.0-alpha13"
 desugaring = "2.1.5"
-activityCompose = "1.11.0-alpha01"
+activityCompose = "1.11.0-alpha02"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
 reorderable = "2.4.3"
@@ -66,7 +66,7 @@ ksp = "2.1.20-1.0.31"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-alpha09"
+androidxMacroBenchmark = "1.4.0-alpha10"
 
 material = "1.13.0-alpha12"
 jsoup = "1.19.1"
