--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,8 +24,8 @@ jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
-material3 = "1.4.0-alpha11"
-composeVersion = "1.8.0-rc02"
+material3 = "1.4.0-alpha12"
+composeVersion = "1.8.0-rc03"
 materialIconsExtended = "1.7.8"
 androidx-datastorePreferencesAndroid = "1.2.0-alpha01"
 appUpdateKtx = "2.1.0"
@@ -49,10 +49,10 @@ gms = "4.4.2"
 ktor = "3.1.2"
 coil = "3.1.0"
 appCompat = "1.7.0"
-androidxCore = "1.16.0-rc01"
-androidxLifecycle = "2.9.0-alpha13"
+androidxCore = "1.16.0"
+androidxLifecycle = "2.9.0-beta01"
 desugaring = "2.1.5"
-activityCompose = "1.11.0-alpha02"
+activityCompose = "1.11.0-beta01"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
 reorderable = "2.4.3"
@@ -65,7 +65,7 @@ ksp = "2.1.20-1.0.32"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-alpha10"
+androidxMacroBenchmark = "1.4.0-alpha11"
 
 material = "1.13.0-alpha12"
 jsoup = "1.19.1"
