--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,14 +24,14 @@ jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
-material3 = "1.4.0-alpha12"
-composeVersion = "1.8.0-rc03"
+material3 = "1.4.0-alpha13"
+composeVersion = "1.9.0-alpha01"
 materialIconsExtended = "1.7.8"
 androidx-datastorePreferencesAndroid = "1.2.0-alpha01"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
 shadowGadgets = "2.3.1"
-firebaseCrashlyticsKtx = "19.4.2"
+firebaseCrashlyticsKtx = "19.4.3"
 konfettiCompose = "2.0.5"
 shadowsPlus = "1.0.4"
 firebaseAnalyticsKtx = "22.4.0"
@@ -50,14 +50,14 @@ ktor = "3.1.2"
 coil = "3.1.0"
 appCompat = "1.7.0"
 androidxCore = "1.16.0"
-androidxLifecycle = "2.9.0-beta01"
+androidxLifecycle = "2.9.0-rc01"
 desugaring = "2.1.5"
 activityCompose = "1.11.0-rc01"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
 reorderable = "2.4.3"
 reviewKtx = "2.0.2"
-splashScreen = "1.2.0-beta01"
+splashScreen = "1.2.0-beta02"
 
 espresso = "3.6.1"
 ksp = "2.1.20-2.0.0"
