--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -81,7 +81,7 @@ pdfviewer = "1.0.0-alpha08"
 fragmentCompose = "1.8.6"
 
 firebaseCrashlyticsGradle = "3.0.3"
-aboutlibraries = "12.1.0-rc04"
+aboutlibraries = "12.1.0"
 moduleGraphGradle = "0.12.0"
 
 [libraries]
