--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,10 +24,10 @@ jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
-material3 = "1.4.0-alpha13"
-composeVersion = "1.9.0-alpha01"
+material3 = "1.4.0-alpha14"
+composeVersion = "1.9.0-alpha02"
 materialIconsExtended = "1.7.8"
-androidx-datastorePreferencesAndroid = "1.2.0-alpha01"
+androidx-datastorePreferencesAndroid = "1.2.0-alpha02"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
 shadowGadgets = "2.3.1"
@@ -50,7 +50,7 @@ ktor = "3.1.3"
 coil = "3.1.0"
 appCompat = "1.7.0"
 androidxCore = "1.16.0"
-androidxLifecycle = "2.9.0-rc01"
+androidxLifecycle = "2.9.0"
 desugaring = "2.1.5"
 activityCompose = "1.11.0-rc01"
 kotlinxCollectionsImmutable = "0.3.8"
@@ -63,9 +63,9 @@ espresso = "3.6.1"
 ksp = "2.1.20-2.0.1"
 
 androidx-test-ext-junit = "1.2.1"
-documentfile = "1.0.1"
+documentfile = "1.1.0"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-alpha11"
+androidxMacroBenchmark = "1.4.0-beta01"
 
 material = "1.13.0-alpha13"
 jsoup = "1.20.1"
@@ -77,7 +77,7 @@ moshi = "1.15.2"
 junit = "4.13.2"
 bouncycastle = "1.80"
 ffmpeg-metadata-retriever = "1.0.19"
-pdfviewer = "1.0.0-alpha08"
+pdfviewer = "1.0.0-alpha09"
 fragmentCompose = "1.8.6"
 
 firebaseCrashlyticsGradle = "3.0.3"
