--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -83,8 +83,11 @@ fragmentCompose = "1.8.6"
 firebaseCrashlyticsGradle = "3.0.3"
 aboutlibraries = "12.1.2"
 moduleGraphGradle = "0.12.0"
+haze = "1.6.0"
 
 [libraries]
+haze = { module = "dev.chrisbanes.haze:haze", version.ref = "haze" }
+haze-materials = { module = "dev.chrisbanes.haze:haze-materials", version.ref = "haze" }
 androidx-fragment-compose = { module = "androidx.fragment:fragment-compose", version.ref = "fragmentCompose" }
 androidx-pdfviewer-fragment = { module = "androidx.pdf:pdf-viewer-fragment", version.ref = "pdfviewer" }
 ffmpeg-metadata-retriever-core = { module = "com.github.wseemann:FFmpegMediaMetadataRetriever-core", version.ref = "ffmpeg-metadata-retriever" }
