--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,10 +24,10 @@ jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.8.0"
-material3 = "1.4.0-alpha14"
-composeVersion = "1.9.0-alpha02"
+material3 = "1.4.0-alpha15"
+composeVersion = "1.9.0-alpha03"
 materialIconsExtended = "1.7.8"
-androidx-datastorePreferencesAndroid = "1.2.0-alpha02"
+androidx-datastorePreferencesAndroid = "1.1.7"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
 shadowGadgets = "2.3.1"
@@ -52,7 +52,7 @@ appCompat = "1.7.0"
 androidxCore = "1.16.0"
 androidxLifecycle = "2.9.0"
 desugaring = "2.1.5"
-activityCompose = "1.11.0-rc01"
+activityCompose = "1.12.0-alpha01"
 kotlinxCollectionsImmutable = "0.4.0"
 scrollbar = "2.2.0"
 reorderable = "2.4.3"
@@ -78,7 +78,7 @@ junit = "4.13.2"
 bouncycastle = "1.80"
 ffmpeg-metadata-retriever = "1.0.19"
 pdfviewer = "1.0.0-alpha09"
-fragmentCompose = "1.8.6"
+fragmentCompose = "1.8.7"
 
 firebaseCrashlyticsGradle = "3.0.3"
 aboutlibraries = "12.1.2"
