--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.2.1-beta01"
-versionCode = "175"
+versionName = "3.3.0-rc01"
+versionCode = "176"
 
 jvmTarget = "17"
 
