--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,8 +24,8 @@ jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.9.0"
-material3 = "1.4.0-alpha15"
-composeVersion = "1.9.0-alpha04"
+material3 = "1.4.0-alpha16"
+composeVersion = "1.9.0-beta01"
 materialIconsExtended = "1.7.8"
 androidx-datastorePreferencesAndroid = "1.1.7"
 appUpdateKtx = "2.1.0"
@@ -49,9 +49,9 @@ gms = "4.4.2"
 ktor = "3.1.3"
 coil = "3.2.0"
 appCompat = "1.7.1"
-androidxCore = "1.16.0"
+androidxCore = "1.17.0-alpha01"
 desugaring = "2.1.5"
-activityCompose = "1.12.0-alpha02"
+activityCompose = "1.12.0-alpha03"
 kotlinxCollectionsImmutable = "0.4.0"
 scrollbar = "2.2.0"
 reorderable = "2.5.1"
@@ -64,9 +64,9 @@ ksp = "2.1.21-2.0.2"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.1.0"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-beta02"
+androidxMacroBenchmark = "1.4.0-rc01"
 
-material = "1.14.0-alpha01"
+material = "1.14.0-alpha02"
 jsoup = "1.20.1"
 
 mlkitDocumentScanner = "16.0.0-beta1"
