--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ androidMinSdk = "21"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.3.0-rc01"
+versionName = "3.3.0"
 versionCode = "176"
 
 jvmTarget = "17"
@@ -46,7 +46,7 @@ agp = "8.11.0"
 hilt = "2.56.2"
 gms = "4.4.3"
 
-ktor = "3.1.3"
+ktor = "3.2.1"
 coil = "3.2.0"
 appCompat = "1.7.1"
 androidxCore = "1.17.0-beta01"
