--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.3.1-alpha01"
-versionCode = "177"
+versionName = "3.3.1"
+versionCode = "178"
 
 jvmTarget = "17"
 
@@ -16,7 +16,7 @@ documentScanner = "1.3.7"
 fadingEdges = "1.0.4"
 logger = "1.0.2"
 
-avifCoder = "2.1.3"
+avifCoder = "2.1.4"
 avifCoderCoil = "2.1.3"
 aire = "0.18.0"
 jxlCoder = "2.4.0.7"
