--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,12 +3,12 @@ androidMinSdk = "21"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.3.1"
-versionCode = "178"
+versionName = "3.3.2-alpha01"
+versionCode = "179"
 
 jvmTarget = "17"
 
-imageToolboxLibs = "3.7.0"
+imageToolboxLibs = "3.8.0"
 trickle = "1.3.0"
 evaluator = "1.0.0"
 quickie = "1.14.0"
@@ -129,6 +129,7 @@ toolbox-uCrop = { module = "com.github.T8RIN.ImageToolboxLibs:ucrop", version.re
 toolbox-opencvTools = { module = "com.github.T8RIN.ImageToolboxLibs:opencv-tools", version.ref = "imageToolboxLibs" }
 toolbox-curves = { module = "com.github.T8RIN.ImageToolboxLibs:curves", version.ref = "imageToolboxLibs" }
 toolbox-exif = { module = "com.github.T8RIN.ImageToolboxLibs:exif", version.ref = "imageToolboxLibs" }
+toolbox-jhlabs = { module = "com.github.T8RIN.ImageToolboxLibs:jhlabs", version.ref = "imageToolboxLibs" }
 
 aire = { module = "com.github.awxkee:aire", version.ref = "aire" }
 jpegli-coder = { module = "com.github.awxkee:jpegli-coder", version.ref = "jpegliCoder" }
