--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,8 +24,8 @@ jxlCoderCoil = "2.4.0.7"
 jpegliCoder = "1.0.2"
 
 tesseract = "4.9.0"
-material3 = "1.4.0-alpha18"
-composeVersion = "1.9.0-beta03"
+material3 = "1.5.0-alpha01"
+composeVersion = "1.9.0-rc01"
 materialIconsExtended = "1.7.8"
 androidx-datastorePreferencesAndroid = "1.1.7"
 appUpdateKtx = "2.1.0"
@@ -49,22 +49,22 @@ gms = "4.4.3"
 ktor = "3.2.3"
 coil = "3.3.0"
 appCompat = "1.7.1"
-androidxCore = "1.17.0-beta01"
+androidxCore = "1.17.0-rc01"
 desugaring = "2.1.5"
-activityCompose = "1.12.0-alpha04"
+activityCompose = "1.12.0-alpha05"
 kotlinxCollectionsImmutable = "0.4.0"
 scrollbar = "2.2.0"
 reorderable = "2.5.1"
 reviewKtx = "2.0.2"
 splashScreen = "1.2.0-rc01"
 
-espresso = "3.6.1"
+espresso = "3.7.0"
 ksp = "2.2.0-2.0.2"
 
-androidx-test-ext-junit = "1.2.1"
+androidx-test-ext-junit = "1.3.0"
 documentfile = "1.1.0"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-rc01"
+androidxMacroBenchmark = "1.4.0"
 
 material = "1.14.0-alpha03"
 jsoup = "1.21.1"
