--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,11 +8,10 @@ versionCode = "181"
 
 jvmTarget = "17"
 
-imageToolboxLibs = "3.9.1"
+imageToolboxLibs = "3.9.2"
 trickle = "1.3.0"
 evaluator = "1.0.0"
 quickie = "1.14.0"
-documentScanner = "1.3.7"
 fadingEdges = "1.0.4"
 logger = "1.0.2"
 
@@ -94,7 +93,6 @@ quickie-bundled = { module = "com.github.T8RIN.QuickieExtended:quickie-bundled",
 quickie-foss = { module = "com.github.T8RIN.QuickieExtended:quickie-foss", version.ref = "quickie" }
 zxing-android-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxingAndroidEmbedded" }
 capturable = { module = "dev.shreyaspatil:capturable", version.ref = "capturable" }
-documentscanner = { module = "com.github.T8RIN:DocumentScanner", version.ref = "documentScanner" }
 
 toolbox-cropper = { module = "com.github.T8RIN.ImageToolboxLibs:cropper", version.ref = "imageToolboxLibs" }
 toolbox-dynamicTheme = { module = "com.github.T8RIN.ImageToolboxLibs:dynamic-theme", version.ref = "imageToolboxLibs" }
@@ -131,6 +129,7 @@ toolbox-curves = { module = "com.github.T8RIN.ImageToolboxLibs:curves", version.
 toolbox-exif = { module = "com.github.T8RIN.ImageToolboxLibs:exif", version.ref = "imageToolboxLibs" }
 toolbox-jhlabs = { module = "com.github.T8RIN.ImageToolboxLibs:jhlabs", version.ref = "imageToolboxLibs" }
 toolbox-ascii = { module = "com.github.T8RIN.ImageToolboxLibs:ascii", version.ref = "imageToolboxLibs" }
+toolbox-documentscanner = { module = "com.github.T8RIN.ImageToolboxLibs:documentscanner", version.ref = "imageToolboxLibs" }
 
 aire = { module = "com.github.awxkee:aire", version.ref = "aire" }
 jpegli-coder = { module = "com.github.awxkee:jpegli-coder", version.ref = "jpegliCoder" }
