Upgrade to min sdk 23

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-androidMinSdk = "21"
+androidMinSdk = "23"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
@@ -23,8 +23,8 @@ jxlCoderCoil = "2.4.1"
 jpegliCoder = "1.0.2"
 
 tesseract = "4.9.0"
-material3 = "1.5.0-alpha01"
-composeVersion = "1.9.0-rc01"
+material3 = "1.5.0-alpha02"
+composeVersion = "1.10.0-alpha01"
 materialIconsExtended = "1.7.8"
 androidx-datastorePreferencesAndroid = "1.1.7"
 appUpdateKtx = "2.1.0"
@@ -48,9 +48,9 @@ gms = "4.4.3"
 ktor = "3.2.3"
 coil = "3.3.0"
 appCompat = "1.7.1"
-androidxCore = "1.17.0-rc01"
+androidxCore = "1.17.0"
 desugaring = "2.1.5"
-activityCompose = "1.12.0-alpha05"
+activityCompose = "1.12.0-alpha06"
 kotlinxCollectionsImmutable = "0.4.0"
 scrollbar = "2.2.0"
 reorderable = "2.5.1"
@@ -74,7 +74,7 @@ capturable = "3.0.1"
 moshi = "1.15.2"
 bouncycastle = "1.81"
 pdfviewer = "1.0.0-alpha10"
-fragmentCompose = "1.8.8"
+fragmentCompose = "1.8.9"
 
 firebaseCrashlyticsGradle = "3.0.6"
 aboutlibraries = "12.2.4"
