--- a/feature/quick-tiles/src/main/AndroidManifest.xml
+++ b/feature/quick-tiles/src/main/AndroidManifest.xml
@@ -15,4 +15,113 @@
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
   -->
 
-<manifest />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <application tools:targetApi="tiramisu">
+        <service
+            android:name=".tiles.ColorPickerTile"
+            android:exported="true"
+            android:icon="@drawable/outline_colorize_24"
+            android:label="@string/pick_color"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".tiles.ImageToolboxTile"
+            android:exported="true"
+            android:icon="@drawable/ic_launcher_monochrome_24"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".tiles.EditScreenshotTile"
+            android:exported="true"
+            android:icon="@drawable/outline_app_registration_24"
+            android:label="@string/edit_screenshot"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".tiles.TakeScreenshotTile"
+            android:exported="true"
+            android:icon="@drawable/outline_screenshot_24"
+            android:label="@string/screenshot"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".tiles.QrTile"
+            android:exported="true"
+            android:icon="@drawable/rounded_qr_code_scanner_24"
+            android:label="@string/qr_code"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".tiles.DocumentScannerTile"
+            android:exported="true"
+            android:icon="@drawable/rounded_document_scanner_24"
+            android:label="@string/document_scanner"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".tiles.TextRecognitionTile"
+            android:exported="true"
+            android:icon="@drawable/image_text_outlined"
+            android:label="@string/recognize_text"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".tiles.ResizeAndConvertTile"
+            android:exported="true"
+            android:icon="@drawable/multiple_image_edit_rounded"
+            android:label="@string/resize_and_convert"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
+        <activity
+            android:name=".screenshot.ScreenshotLauncher"
+            android:theme="@style/TransparentActivity" />
+
+        <service
+            android:name=".screenshot.ScreenshotService"
+            android:foregroundServiceType="mediaProjection"
+            android:process=":remote" />
+    </application>
+</manifest>
