--- a/feature/quick-tiles/src/main/AndroidManifest.xml
+++ b/feature/quick-tiles/src/main/AndroidManifest.xml
@@ -115,6 +115,18 @@
             </intent-filter>
         </service>
 
+        <service
+            android:name=".tiles.GeneratePaletteTile"
+            android:exported="true"
+            android:icon="@drawable/outline_colorize_24"
+            android:label="@string/generate_palette"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".screenshot.ScreenshotLauncher"
             android:theme="@style/TransparentActivity" />
