--- a/core/crash/src/main/AndroidManifest.xml
+++ b/core/crash/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
   -->
 
-<manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <application>
+        <activity android:name=".core.crash.presentation.CrashActivity" />
+    </application>
 
 </manifest>
