--- a/core/crash/src/main/AndroidManifest.xml
+++ b/core/crash/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity android:name=".core.crash.presentation.CrashActivity" />
+        <activity android:name=".presentation.CrashActivity" />
     </application>
 
 </manifest>
