--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "23"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.4.0-alpha04"
-versionCode = "185"
+versionName = "3.4.0-beta01"
+versionCode = "186"
 
 jvmTarget = "17"
 
